--- a/app/templates/base_types/showlnobj.html
+++ b/app/templates/base_types/showlnobj.html
@@ -52,7 +52,8 @@
             </tbody>
         </table>
         </div>
-
+        <hr class="my-4">
+        <p>{{lntype.explanation}}</p>
 
         {% else %}
         <h2 class="mt-4">В типе логического узла "{{lntype.name}}" ({{lntype.description}}) нет объектов :(</h2>
