--- a/app/templates/base_types/main.html
+++ b/app/templates/base_types/main.html
@@ -11,7 +11,7 @@
           <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
         </div>
         <div>
-          <h3 class="fs-2">Получить отчеты по шкафам</h3>
+          <h3 class="fs-2">Типовые шкафы ШЭТ</h3>
           <p>Раздел генерации отчетов по базе данных в части шкафов.</p>
           <a href="reports" class="btn btn-primary">
             Перечень шкафов
@@ -23,10 +23,10 @@
           <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"/></svg>
         </div>
         <div>
-          <h3 class="fs-2">Получить отчеты по шкафам по объектам КП</h3>
-          <p>Раздел генерации отчетов по базе данных в части объектов корпоративного профиля.</p>
-          <a href="reports-obj" class="btn btn-primary">
-            Не работает
+          <h3 class="fs-2">Типы логических узлов</h3>
+          <p>Раздел генерации отчетов по базе данных в части типов логических узлов.</p>
+          <a href="lntypes" class="btn btn-primary">
+            Список типов логических узлов
           </a>
         </div>
       </div>
