--- a/app/templates/base_types/reports.html
+++ b/app/templates/base_types/reports.html
@@ -14,6 +14,7 @@
                 <thead>
                     <tr>
                       <th scope="col">Обозначение шкафа</th>
+                      <th scope="col">Назначение шкафа</th>
                       <th scope="col">ИЭУ1</th>
                       <th scope="col">ИЭУ2</th>
                       <th scope="col">ИЭУ3</th>
@@ -23,6 +24,7 @@
                     {% for item in cabinets %}
                     <tr>
                         <td><a href="getreport/?name={{item.name}}&type=cabinet">ШЭТ {{item.name}}</a></td>
+                        <td>{{item.description}}</td>
                         <td><a href="show/?name={{item.terminal1}}&type=ied">{{item.terminal1}}</a></td>
                         <td><a href="show/?name={{item.terminal2}}&type=ied">{{item.get_terminal2}}</a></td>
                         <td><a href="show/?name={{item.terminal3}}&type=ied">{{item.get_terminal3}}</a></td>
