--- a/app/templates/base_types/lntypes.html
+++ b/app/templates/base_types/lntypes.html
@@ -31,7 +31,7 @@
             </table>
     </div>
     <hr class="my-4">
-    <p><em>Примечание</em><br>При нажатии на обозначение типа логического узла генерируется отчет по данному типу.</p>
+    <p><em>Примечание</em><br>При нажатии на обозначение типа логического узла открывается страница с перечнем объектов данного типа.</p>
     {% else %}
     <h2 class="mt-4">В базе данных нет типов логических узлов :(</h2>
     {% endif %}
