--- a/app/templates/base_types/showlnobj.html
+++ b/app/templates/base_types/showlnobj.html
@@ -22,6 +22,7 @@
                   <th scope="col">Функц. группа</th>
                   <th scope="col">ЦУС/ РДУ/ РАС</th>
                   <th scope="col">Канал в РАС / уставка</th>
+                  <th scope="col">Состояние переключателя</th>
                   <th scope="col">Датасет</th>
                   <th scope="col">Тип сигнала</th>
                   <th scope="col">Номер сигнала</th>
@@ -43,6 +44,7 @@
                     {% if item.func_group > 23 or item.func_group < 1 %}<td>-</td>{% endif %}
                     <td>{{item.cus}}/{{item.rdu}}/{{item.ras}}</td>
                     <td>{{item.sgras_name}}</td>
+                    <td>{{item.get_sg_modes}}</td>
                     <td>{{item.get_dataset}}</td>
                     <td>{{item.signal_type}}</td>
                     <td>{{item.signal_number}}</td>
