--- a/app/templates/base_types/showldobj.html
+++ b/app/templates/base_types/showldobj.html
@@ -41,7 +41,7 @@
 
 
     {% else %}
-    <h2 class="mt-4">В логическом устройстве "{{ld.name}}" ({{ld.get_description}}) нет объектов :(</h2>
+    <h2 class="mt-4">В логическом устройстве {{ld.name}} ({{ld.get_description}}) нет логических узлов :(</h2>
     {% endif %}
 </main>
 
