--- a/app/templates/base_types/showlnobj.html
+++ b/app/templates/base_types/showlnobj.html
@@ -22,7 +22,7 @@
                   <th scope="col">Функц. группа</th>
                   <th scope="col">ЦУС/ РДУ/ РАС</th>
                   <th scope="col">Канал в РАС / уставка</th>
-                  <th scope="col">Состояние переключателя</th>
+                  <th scope="col">Состояние переключателя <br>(SPG, ENG)</th>
                   <th scope="col">Датасет</th>
                   <th scope="col">Тип сигнала</th>
                   <th scope="col">Номер сигнала</th>
