--- a/app/templates/base_types/showlnobj.html
+++ b/app/templates/base_types/showlnobj.html
@@ -4,11 +4,19 @@
 {% block content %}
 
 <main class="container py-5">
+        <div class="container small">
+            <a href="/checkconns/?name={{lntype.name}}&type=ln_type">
+                <button type="button" class="btn btn-info">Проверить потомков</button>
+            </a>
+        </div>
+
 
         {% if objs %}
         <h2 class="mt-4">{{lntype.name}}</h2>
         <p><strong>{{lntype.description}}</strong></p>
+
         <hr class="my-4">
+
         <p>Объекты узла, входящие в отчеты</p>
         <div class="container small">
         <table class="table table-striped table-hover">
