--- a/app/templates/base_types/cabinet.html
+++ b/app/templates/base_types/cabinet.html
@@ -12,7 +12,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#docdoc"/></svg>
         </div>
         <h3 class="fs-2">Отчет по сигналам MMS, уставкам и РАС</h3>
         <p>Генерация отчета по шкафу в формате docx</p>
@@ -26,7 +26,7 @@
       </div>
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#docdxf"/></svg>
         </div>
         <h3 class="fs-2">Отчет в форме чертежа</h3>
         <p>Генерация отчета в формате dxf. Вид отчета представляет собой функциональные блоки в составе шкафа с обозначенными входами и выходами.</p>
